2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/main.c (main): Add missing const qualifier.
	* grub-core/loader/efi/appleloader.c (devdata): Likewise.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Unify and improve RAID and crypto xor.

	* grub-core/disk/raid.c (grub_raid_block_xor): Removed. All users
	changed to grub_crypto_xor
	* grub-core/lib/crypto.c (grub_crypto_xor): Moved from here ...
	* include/grub/crypto.h (grub_crypto_xor): ... here. Inlined.
	Use bigger types when possible.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/raid.c (scan_devices): Fix condition.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/drivers/ieee1275/ofnet.c (bootp_response_properties):
	Make name a const ptr.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/ieee1275/ieee1275.c (grub_ieee1275_finddevice): Make
	first argument a const pointer.
	* grub-core/kern/ieee1275/openfw.c (grub_children_iterate): Likewise.
	* include/grub/ieee1275/ieee1275.h (grub_ieee1275_finddevice): Update
	proto.
	(grub_children_iterate): Likewise.
	(grub_machine_mmap_iterate): Remove redundant declaration.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/acpi.c (grub_acpi_create_ebda) [!x86]: Disable.
	(grub_cmd_acpi) [!x86]: Disable EBDA.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Enable UTF8 in gnulib regexp.

	* config.h.in (RE_ENABLE_I18N) [!GRUB_UTIL]: New define.
	* grub-core/lib/posix_wrap/ctype.h (islower): Use grub_islower.
	(isupper): Use grub_isupper.
	(isascii): New inline function.
	* grub-core/lib/posix_wrap/wchar.h: Replace dummy with real contents.
	* grub-core/lib/posix_wrap/wctype.h: Likewise.
	* grub-core/normal/charset.c (grub_utf8_process): New function.
	(grub_utf8_to_utf16): Use grub_utf8_process.
	(grub_encode_utf8_character): New function.
	(grub_ucs4_to_utf8): Use grub_encode_utf8_character.